--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,8 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# 3rd/lua-5.3.6
+3rd/lua-5.3.6/src/lua
+3rd/lua-5.3.6/src/luac
+3rd/lua-5.3.6/install/
