change 2023-10-08 demo code

--- a/blog_demo/2023-10-08-lua-coroutine-yield-across-a-c-call-boundary/makefile
+++ b/blog_demo/2023-10-08-lua-coroutine-yield-across-a-c-call-boundary/makefile
@@ -1,22 +1,24 @@
-.PHONY: default lua clean test1 test2 runlua
+.PHONY: default clib lua test1 test2 runlua clean
 
 LUADIR="../../3rd/lua-5.3.6/"
 LUAINC="../../3rd/lua-5.3.6/install/include"
 LUALIB="../../3rd/lua-5.3.6/install/lib"
 LUABIN="../../3rd/lua-5.3.6/install/bin/lua"
 
-default: clib.so
+default: clib
 
 lua:
 	cd $(LUADIR) && make && make local
 
+clib: clib.so
+
 clib.so: clib.c
 	gcc -fPIC -shared -g -o $@ $^ -I $(LUAINC) -L $(LUALIB)
 
-test1: clib.so
+test1: clib
 	$(LUABIN) test_co_1.lua
 
-test2: clib.so
+test2: clib
 	$(LUABIN) test_co_2.lua
 
 runlua:
