--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,7 @@ dkms.conf
 3rd/lua-5.3.6/src/lua
 3rd/lua-5.3.6/src/luac
 3rd/lua-5.3.6/install/
+
+
+# blog_demo
+blog_demo/epoll_demo/epoll_server
