--- a/blog_demo/epoll_httpserver_demo/Makefile
+++ b/blog_demo/epoll_httpserver_demo/Makefile
@@ -5,8 +5,8 @@ build: epoll_http_server
 epoll_http_server : epoll_http_server.cpp
 	g++ -o $@ $+
 
-runserver :
+runserver : epoll_http_server
 	chmod +x epoll_http_server && ./epoll_http_server
 
-runclient :
+runclient : epoll_http_server
 	nc 127.0.0.1 8080
