--- a/blog_demo/epoll_blocking_demo/Makefile
+++ b/blog_demo/epoll_blocking_demo/Makefile
@@ -1,12 +1,12 @@
 .PHONY: build runserver runclient
 
-build: epoll_blocking_demo
+build: a.out
 
-epoll_blocking_demo : epoll_blocking_demo.cpp
+a.out : epoll_blocking_demo.cpp
 	g++ -o $@ $+
 
 runserver : build
-	chmod +x epoll_blocking_demo && ./epoll_blocking_demo 127.0.0.1 9944
+	chmod +x a.out && ./a.out 127.0.0.1 9944
 
 runclient : build
 	nc 127.0.0.1 9944
